# multimodal-counterfactual-lab

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.json  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY_2025.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GENERATION_4_COMPLETION.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.security  IMPLEMENTATION_SUMMARY.json  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP_REQUIRED.md  Makefile  NACS_CF_RESEARCH_PAPER_DRAFT.md  PRODUCTION_DEPLOYMENT_CONFIG.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_CHARTER.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  RESEARCH_PUBLICATION_REPORT.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_VALIDATION_2025.md  TERRAGON_GENERATION_4_FINAL_SUMMARY.md  TERRAGON_RESEARCH_PAPER.md  TERRAGON_RESEARCH_PUBLICATION_SUMMARY_2025.json  (+50 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot-security.yml  dependabot.yml  project-metrics.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: security.yml
.terragon/: COMMIT_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  autonomous-monitor.sh  config.yaml  discover-value.py  value-metrics.json
benchmarks/: __init__.py  benchmark_evaluation.py  benchmark_generation.py
cache/: cache_metadata.json
cache/generations/: 0bfd22fb8ed66c2d.json  160b3ca9439ce871.json  1db661208a1e6850.json  2a29858cf27ab63d.json  3b80ca58c5fb2035.json  3fd7fb58210b54ed.json  4e9b621f767117c5.json  577979f18d80a605.json  636021b714ff4a02.json  643b4c4f9e486a37.json  66f466fa1e51f105.json  686a44b8bbb8d028.json  73936b15b766bc17.json  7ef27d880c2e53ab.json  8d70611999d6bd69.json  952c8b422385e18f.json  9b86205677844a96.json  9e24c908db07bfb2.json  aa9bbafa87610aaf.json  aaf29de0eabc5192.json  ab03ed8ad75b1ea2.json  b66775d9755df240.json  b8f95791ef093bf5.json  b9bee80b4e92b954.json  bb7ceb870409151e.json  bd81023a5c1b7710.json  c2b98835c4d23fb5.json  cd6b2116837795a0.json  d5439da4bc3e1957.json  da57f49a7d201d16.json  df8a412401d95f99.json  ef23ce802750a4e7.json  feb527a6f76cd208.json
cli_test_output/: metadata.json
deployment/: README.md  docker-compose.prod.yml  kubernetes-production.yml  nginx.conf
docs/: IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SETUP_REQUIRED.md  WORKFLOW_DEPLOYMENT.md  WORKFLOW_SETUP.md  github-workflows.md  index.md
docs/adr/: 001-generation-method-selection.md  002-evaluation-framework-design.md  003-model-integration-approach.md  README.md
docs/compliance/: regulatory-compliance.md
docs/deployment/: README.md  production-deployment.md
docs/development/: development-environment.md
docs/github-workflows/: WORKFLOW_SETUP.md  ci.yml  release.yml  security.yml
docs/github-workflows-templates/: ci.yml  codeql-config.yml  release.yml
docs/monitoring/: README.md
docs/operations/: disaster-recovery.md  runbook.md
docs/runbooks/: README.md
docs/security/: container-security.md  sbom-generation.md  security-framework.md
docs/testing/: README.md  mutation-testing.md
docs/workflows/: autonomous-sdlc.yml  ci-cd-template.md  dependency-update.yml
examples/: advanced_usage.py  basic_usage.py
monitoring/: alert_rules.yml  alertmanager.yml  grafana-dashboard.json  prometheus.yml  recording_rules.yml
monitoring/grafana/dashboards/: dashboard.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/rules/: alerts.yml
quality_gates_output/: comprehensive_quality_report_20250824_140803.json  comprehensive_quality_report_20250826_194059.json
research_validation_output/: nacs_cf_validation_20250824_140400.json
scripts/: build.sh  collect_metrics.py  generate_sbom.py  maintenance_automation.py  prepare_release.py  release_automation.py  security_scan.sh
src/cache/: cache_metadata.json
src/cache/generations/: 1168b9bf07728579.json  613e59a6bfc8afaf.json  7850328c67142347.json  a7c034a3a494d192.json  cffdaf12057d4918.json
src/counterfactual_lab/: __init__.py  advanced_optimization.py  advanced_scaling.py  auto_scaling.py  bias.py  cli.py  core.py  enhanced_core.py  enhanced_error_handling.py  enhanced_reliability.py  error_handling.py  exceptions.py  generation_5_breakthrough.py  generator.py  global_compliance.py  internationalization.py  lightweight_core.py  minimal_cli.py  minimal_core.py  monitoring.py  optimization.py  perturbations.py  production_core.py  research_core.py  research_innovation.py  robust_core.py  robust_security.py  scalable_core.py  scalable_performance.py  security.py  self_healing_pipeline.py  validators.py
src/counterfactual_lab/data/: __init__.py  cache.py  repository.py  storage.py
src/counterfactual_lab/methods/: __init__.py  icg.py  modicf.py
test_output/: metadata.json
tests/: __init__.py  conftest.py  test_all_generations.py  test_bias.py  test_comprehensive.py  test_generator.py  test_perturbations.py
tests/contract/: test_api_contracts.py
tests/e2e/: __init__.py  test_cli_workflow.py
tests/integration/: __init__.py  test_generation_pipeline.py
tests/integration/pipelines/: test_end_to_end_pipeline.py
tests/mutation/: test_mutation.py
tests/performance/: __init__.py  test_memory_usage.py
tests/performance/benchmarks/: test_generation_performance.py
tests/property/: test_property_based.py
tests/unit/: test_auto_scaling.py  test_core.py  test_generator.py  test_perturbations.py  test_self_healing_pipeline.py
tests/unit/methods/: test_modicf.py
tests/unit/metrics/: test_fairness_metrics.py
