[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-counterfactual-lab"
version = "0.2.0"
description = "Counterfactual text generation toolkit for fairness & robustness research in vision-language models"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Daniel Schmidt"}]
keywords = ["fairness", "bias", "counterfactual", "nlp", "ai-ethics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
counterfactual-lab = "counterfactual_lab.cli:main"

[project.urls]
Homepage = "https://github.com/danieleschmidt/multimodal-counterfactual-lab"
Repository = "https://github.com/danieleschmidt/multimodal-counterfactual-lab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "-v"]
markers = [
    "slow: marks tests as slow",
    "unit: unit tests",
]
